--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
+    "framer-motion": "^11.11.11",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "react-parallax-tilt": "^1.7.250",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.9"
   }
