--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ package-lock.json
 public/vite.svg
 src/assets/logo-bak.png
 src/assets/back-image-back.jpg
+src/assets/texture-back.jpg
+src/assets/hero-back.gif
+src/assets/hero-bakc-2.gif
