--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.11",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
+    "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
@@ -28,6 +31,7 @@
     "postcss": "^8.4.47",
     "react-parallax-tilt": "^1.7.250",
     "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
     "vite": "^5.4.9"
   }
 }
